--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,62 +1,634 @@
-html, body {
-  padding-top: 0.2rem;
-  font-family: 'D2 coding', 'Fira Code', monospace;
-  font-size: 14px;
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */button,hr,input{overflow:visible}progress,sub,sup{vertical-align:baseline}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}details,main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{padding:.35em .75em .625em}legend{color:inherit;display:table;max-width:100%;white-space:normal}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}[hidden],template{display:none}
+/* Global */
+html,body {
+  width: 100%;
+  height: 100%;
 }
-@media screen and (min-width: 1024px) {
-  html, body { font-size: 18px; }
+* {
+  box-sizing: border-box;
 }
-body {
-  --color-background: #282C34;
-  --color-white-space: #3C4049;
-  --color-collapsed: #3C4049;
-  --color-comment: #5C6370;
-  --color-variable: #ABB2BF;
-  --color-expression: #ABB2BF;
-  --color-storage-type: #C678DD;
-  --color-keyword: #61AFEF;
-  --color-type: #E5C07B;
-  --color-class: #E5C07B;
-  --color-string: #98C379;
-  --color-string-link: #98C379;
-  --color-constant: #D19A66;
-  --color-number: #D19A66;
-  --color-zsh-text: #899;
-  --color-zsh-path-background: #2E8CCF;
-  --color-zsh-path-foreground: #000;
-  --color-zsh-branch-background: #85981C;
-  --color-zsh-branch-foreground: #000;
-  --color-zsh-command-valid: #85981C;
-  --color-zsh-args: #cdd;
-  margin: 0.3rem;
-  background-color: var(--color-background);
-  color: #F8F8F2;
+img {
+  max-width: 100%;
+  max-height: 100%;
 }
-.zsh { color: var(--color-zsh-text); font-size: 0; padding-bottom: 0.5rem; }
-.zsh .now { display: inline; }
-.zsh .ip { display: inline; }
-.zsh span { font-size: 1rem; }
-.zsh .branch:before,
-.zsh .command:before { content: ''; display: inline-block; width: 0; height: 0; border: 0.6rem solid transparent; vertical-align: -0.25rem; }
-.zsh .path { background-color: var(--color-zsh-path-background); color: var(--color-zsh-path-foreground); padding-right: 1rem; }
-.zsh .branch { background-color: var(--color-zsh-branch-background); color: var(--color-zsh-branch-foreground); padding-right: 1rem; }
-.zsh .branch:before { border-left-color: var(--color-zsh-path-background); }
-.zsh .command:before { border-left-color: var(--color-zsh-branch-background); }
-.zsh .command { color: var(--color-zsh-command-valid); }
-.zsh .args { padding-left: 1rem; color: var(--color-zsh-args); }
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: none;
+}
+.container {
+  max-width: 1170px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.row {
+  margin-right: -15px;
+  margin-left: -15px;
+}
+.section {
+  padding: 200px 0;
+}
+.section .secTitle {
+  font-size: 45px;
+  margin: 0 0 65px 0;
+  text-transform: capitalize;
+  position: relative;
+  padding-bottom: 15px;
+}
+.section .secTitle:after {
+  content: "";
+  display: block;
+  width: 45px;
+  height: 2px;
+  background: #111111;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
 
-.space:before { content: '·'; }
-.line { display: block; padding: 2px 0 2px 0 }
-.white-space { color: var(--color-white-space); }
-.comment { color: var(--color-comment); }
-.variable { color: var(--color-variable); }
-.expression { color: var(--color-expression); }
-.storage-type { color: var(--color-storage-type); }
-.keyword { color:var(--color-keyword); }
-.type { color: var(--color-type); }
-.class { color: var(--color-class); }
-.string { color: var(--color-string); }
-.string a { color: var(--color-string-link); }
-.constant { color: var(--color-constant); }
-.number { color: var(--color-number); }
-.collapsed { color: var(--color-collapsed); }
+/* Typo */
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 17px;
+  font-weight: 300;
+  line-height: 1.4;
+  color: #606973;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: sans-serif;
+  font-weight: 700;
+  color: #111111;
+}
+h1,
+h2 {
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+h3,
+h4 {
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+h5,
+h6 {
+  margin-top: 10px;
+  margin-bottom: 7px;
+}
+p {
+  margin: 10px 0;
+}
+
+/*Loader*/
+/* Animation */
+@-webkit-keyframes loading {
+  to { -webkit-transform: rotate(360deg); }
+}
+@-moz-keyframes loading {
+  to { -moz-transform: rotate(360deg); }
+}
+@-ms-keyframes loading {
+  to { -ms-transform: rotate(360deg); }
+}
+@keyframes loading {
+  to { transform: rotate(360deg); }
+}
+
+/* Loader (*/
+#loading {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  margin-top: -20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: transparent;
+
+  border-top: 4px solid #fff;
+  border-right: 4px solid #fff;
+  border-bottom: 4px solid #777;
+  border-left: 4px solid #777;
+
+  -webkit-animation: loading 1.2s infinite linear;
+  -moz-animation: loading 1.2s infinite linear;
+  -ms-animation: loading 1.2s infinite linear;
+  animation: loading 1.2s infinite linear;
+
+}
+/**/
+#loader {
+  z-index: 1000000000000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #151619;
+  text-align: center;
+}
+/* Header */
+#header {
+  width: 100%;
+  height: 100%;
+  background: #151619;
+  padding: 60px 0;
+  position: relative;
+}
+
+/* Main Nav */
+#mainNavWrap {
+  width: 100%;
+  height: 60px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: #111111;
+  padding: 10px 0;
+  z-index: 1000000;
+  font-size: 0;
+}
+#logo, #mainMenu {
+  display: inline-block;
+  vertical-align: middle;
+}
+#logo {
+  width: 30%;
+}
+#logo img {
+  height: 40px;
+}
+#logo h1, #logo a {
+  margin: 0;
+  font-size: 16px;
+  color: #a7b1bb;
+  padding: 5px 10px;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+#mainMenu {
+  font-size: 16px;
+  width: 70%;
+  text-align: right;
+}
+#mainMenu ul {
+  margin: 0;
+  padding: 0;
+}
+#mainMenu ul li {
+  display: inline-block;
+  margin: 0 10px;
+}
+#mainMenu ul li:last-child {
+  margin: 0;
+}
+#mainMenu ul li a {
+  font-size: 16px;
+  color: #a7b1bb;
+  padding: 5px 10px;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+/* Intro */
+#intro {
+  position: absolute;
+  width: 100%;
+  max-width: 500px;
+  top: 45%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+}
+#intro h1 {
+  margin: 0;
+  color: #fff;
+  font-size: 45px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+#scrollDown {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+#scrollDown a {
+  padding: 10px;
+  display: inline-block;
+}
+#scrollDown svg {
+  height: 17px;
+  width: auto;
+  fill: #ffffff;
+}
+/* Skills */
+#skillsCon {
+  font-size: 0;
+}
+.aSkill, .skillImg, .skillDesc {
+  display: inline-block;
+  vertical-align: middle;
+}
+.aSkill {
+  width: 50%;
+}
+.aSkill:first-child {
+  padding-right: 40px;
+}
+.aSkill:last-child {
+  padding-left: 40px;
+}
+.skillImg {
+  width: 20%;
+}
+.skillDesc {
+  width: 80%;
+}
+.skillImg svg {
+  height: 55px;
+  width: auto;
+  fill: #61d090;
+}
+.skillDesc .skillTitle {
+  font-size: 26px;
+  margin: 20px 0 15px 0;
+}
+.skillDesc p {
+  font-size: 18px;
+  color: #606973;
+}
+
+/* Projects */
+#projects {
+  background: #eff2f5;
+}
+
+#projectsCon {
+  font-size: 0;
+  margin-top: -30px;
+  margin-bottom: -30px;
+}
+
+.aProjectsWrap {
+  display: inline-block;
+  vertical-align: middle;
+  width: 50%;
+  padding: 30px 0;
+}
+.aProjectsWrap:nth-child(even) {
+  padding-left: 30px;
+}
+.aProjectsWrap:nth-child(odd) {
+  padding-right: 30px;
+}
+.aProjects {
+  cursor: pointer;
+  background: #ffffff;
+  border-radius: 1%;
+  overflow: hidden;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  position: relative;
+  top: 0;
+}
+.aProjects:hover {
+  -webkit-box-shadow: 0 0 25px rgba(0,0,0,0.08);
+  box-shadow: 0 0 25px rgba(0,0,0,0.08);
+  top: -3px;
+}
+.aProjectsThumb {
+  position: relative;
+  position: relative;
+  background-image: url("./projects/thumb.png");
+  background-size: cover;
+  padding-top: 70%;
+  color: #ffffff;
+}
+.aProjectsCon {
+  padding: 30px 40px;
+}
+.aProjectsTitle {
+  font-size: 28px;
+  margin: 0 0 15px 0;
+  text-transform: capitalize;
+}
+.aProjectsCat {
+  font-size: 17px;
+  margin: 0;
+  text-transform: uppercase;
+  color: #9eaeb9;
+  letter-spacing: 1px;
+}
+
+.aProjectsThumb .overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  background: rgba(0, 0, 0, 0);
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+}
+.aProjects:hover .aProjectsThumb .overlay {
+  background: rgba(0, 0, 0, .4);
+}
+.aProjectsThumb .overlay:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0,0,0,0);
+  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.1)));
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%);
+  background: -o-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%);
+  background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%);
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 );
+
+}
+.expandIcon {
+  position: absolute;
+  top: 60%;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 1000;
+  transform: translateY(-50%);
+  opacity: 0;
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+}
+.expandIcon img {
+  display: block;
+  margin: 0 auto;
+  width: 100px;
+}
+.aProjects:hover .expandIcon {
+  opacity: .6;
+  top: 50%;
+}
+.aProjectsLightBox {
+  font-size: 18px;
+  overflow: auto;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #eff2f5;
+  color: #111;
+  z-index: 999999999999;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
+.aProjectsLightBox.expanded {
+  visibility: visible;
+  opacity: 1;
+}
+
+.aProjectsLightBox .closeIcon {
+  cursor: pointer;
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 20px 40px 10px 10px;
+}
+.aProjectsLightBox .closeIcon img {
+  width: 25px;
+}
+.aProjectsLightBoxOpened {
+  overflow: hidden;
+}
+.aProjectsLightBoxOpened .aProjects {
+  cursor: initial;
+}
+.aProjectsLightBoxCon {
+  max-width: 800px;
+  width: 95%;
+  margin: 100px auto;
+  position: relative;
+  top: 50px;
+  opacity: 0;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  background: #ffffff;
+  border-radius: 1%;
+  overflow: hidden;
+}
+.aProjectsLightBoxCon.show {
+  top: 0;
+  opacity: 1;
+  -webkit-box-shadow: 0 0 25px rgba(0,0,0,0.08);
+  box-shadow: 0 0 25px rgba(0,0,0,0.08);
+}
+/* Light Box */
+.aProjectsLightBoxCon .thumb {
+  position: relative;
+  border-radius: 1% 1% 0 0;
+  overflow: hidden;
+}
+.aProjectsLightBoxCon .thumb:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0,0,0,0);
+  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.1)));
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%);
+  background: -o-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%);
+  background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%);
+  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#000000', GradientType=0 );
+
+}
+.aProjectsLightBoxCon .thumb img {
+  display: block;
+  width: 100%;
+}
+.aProjectsLightBoxCon .postBody{
+  padding: 30px 50px;
+}
+.aProjectsLightBoxCon .postTop {
+  font-size: 0;
+  padding-bottom: 30px;
+}
+.aProjectsLightBoxCon .postTop h1, .aProjectsLightBoxCon .postTop .livePreviewLink {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 17px;
+}
+.aProjectsLightBoxCon .postTop h1 {
+  width: 75%;
+  font-size: 28px;
+  margin: 0;
+}
+.aProjectsLightBoxCon .postTop .livePreviewLink {
+  width: 25%;
+  text-align: right;
+}
+.thumbAndPreview {
+  text-align: center;
+}
+
+.thumbAndPreview img {
+  width: 100%;
+}
+.livePreviewLink a {
+  background: #3dca83;
+  color: #fff;
+  padding: 14px 20px;
+  display: inline-block;
+  border-radius: 20000px;
+}
+.aProjectsLightBoxCon .psotDis {
+  color: #606973;
+}
+.aProjectsLightBoxCon .postSkills {
+  padding-top: 30px;
+}
+.aProjectsLightBoxCon .postSkills .aPostSkill {
+  padding: 8px 15px;
+  color: #111111;
+  background: #eff2f5;
+  display: inline-block;
+  font-size: 15px;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
+
+/* Contact */
+#contact {
+  text-align: center;
+  padding: 25%;
+  color: #fff;
+  background: #61d090;
+  background: -webkit-linear-gradient(to right, #61d090, #61d0cb);
+  background: linear-gradient(to right, #61d090, #61d0cb);
+
+}
+#contactCon h2 {
+  color: #ffffff;
+  font-size: 25px;
+  margin: 0 0 15px 0;
+}
+#contactCon p {
+
+}
+#contactCon .myEmail {
+  font-family: sans-serif;
+  font-weight: 700;
+}
+/* Footer */
+#footer {
+  padding: 20px 0;
+  background: #111111;
+}
+
+#copyrights {
+  text-align: center;
+  color: #62696f;
+}
+
+
+@media (max-width: 1000px){
+  .aSkill {
+    width: 100%;
+  }
+  .skillImg {
+    text-align: center;
+  }
+}
+
+@media (max-width: 750px){
+  .aProjectsLightBoxCon .postTop h1,
+  .aProjectsLightBoxCon .postTop .livePreviewLink {
+    width: 100%;
+  }
+  .aProjectsLightBoxCon .postTop .livePreviewLink {
+    margin-top: 20px;
+    text-align: left;
+  }
+  #mainMenu {
+    display: none;
+  }
+  #logo {
+    width: 100%;
+    text-align: center;
+  }
+  div#canvasContainer {
+    display: none;
+  }
+  .aSkill:first-child, .aSkill:last-child {
+    padding: 20px;
+  }
+}
+
+@media (max-width: 600px){
+  .aProjectsWrap {
+    width: 100%;
+  }
+  .aProjectsWrap:nth-child(even) {
+    padding-left: 0;
+  }
+  .aProjectsWrap:nth-child(odd) {
+    padding-right: 0;
+  }
+}
+@media (max-width: 450px){
+  #intro h1 {
+    font-size: 40px;
+  }
+  .skillImg {
+    width: 100%;
+    text-align: left;
+  }
+  .skillDesc {
+    width: 100%;
+  }
+
+}
